--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <p>Contato do site</p>
-    <p>Contato: fake@gmail.com</p>
+    <p>Contato: fake@gmail.com.br</p>
 </body>
 </html>
